# community_app

./: .gitignore  README.md  run.sh  stop.sh
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.sh  stop.sh
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  apple_arena.py  arena.py  category.py  comment.py  emoticon.py  like.py  notification.py  post.py  report.py  settings.py  user.py  wiki.py
backend/app/routers/: admin.py  apple_arena.py  arena.py  categories.py  comments.py  emoticons.py  likes.py  notifications.py  posts.py  reports.py  upload.py  users.py  wiki.py
backend/app/schemas/: admin.py  arena.py  category.py  comment.py  emoticon.py  notification.py  post.py  report.py  user.py  wiki.py
backend/app/services/: admin_service.py  arena_service.py  category_service.py  comment_service.py  emoticon_service.py  like_service.py  notification_service.py  post_service.py  report_service.py  user_service.py  wiki_service.py
backend/tests/: test_main.py
frontend/: .gitignore  index.html  package-lock.json  package.json  run.sh  stop.sh  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: admin.js  appleArena.js  arena.js  auth.js  client.js  emoticons.js  notifications.js  posts.js  reports.js  wiki.js
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: AdminPage.css  AdminPage.jsx  AppleArenaListPage.css  AppleArenaListPage.jsx  AppleArenaRoomPage.css  AppleArenaRoomPage.jsx  AuthPage.css  (+24 more)
(+26 files in other folders)
